event system added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,10 @@
         "typeinfo": "c",
         "windowsx.h": "c",
         "vulkan_platform.h": "c",
-        "renderer_frontend.h": "c"
+        "renderer_frontend.h": "c",
+        "kmemory.h": "c",
+        "iosfwd": "c",
+        "tuple": "cpp",
+        "utility": "cpp"
     }
 }
